# bindays

./: .gitignore  .pre-commit-config.yaml  README.md  bin_check.py  conftest.py  pyproject.toml  requirements.in  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
bindays/: __init__.py  cache.py  council.py  models.py
bindays/councils/: __init__.py
bindays/councils/glasgow/: __init__.py  calendar.py  uprn.py
tests/: helpers.py  test_cache.py  test_collections.py  test_council.py  test_report.py  test_uprn.py
